Style impact page more like visual design
Constrain affiliates to 1200px width
Add margin space to affiliates at 1200px
Size icons to fit five across at 1200px
Limit banner height
Adjust overlay size and position at large screen sizes
Adjust padding in and around affiliates

--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -45,7 +45,8 @@
     }
 
     .hero-quote {
-        font-size: calc(4.8rem + 1.05vw);
+        @include constrained-variable-text(6, 0.2);
+
         font-weight: bold;
         line-height: 1;
         padding-bottom: 4rem;
