--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -22,7 +22,7 @@
         <span class="scrolldown-chevron"><a href="#affiliates"><i class="fa fa-chevron-down"></i></a></span>
 
         <div id="affiliates" class="affiliates">
-            <div class="text-wrapper">
+            <div class="text-content">
                 <h2>Institutional Partner and Affiliate Schools</h2>
 
                 <p>
