Style footer more like visual design Plus add space to adopters header and change to column-orientation

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -34,7 +34,7 @@
             </p>
 
             <p>
-                &copy; 1999-2015, Rice University. Except otherwise noted,
+                &copy; 1999-2015, Rice University. Except where otherwise noted,
                 textbooks on this site are licensed under a Creative
                 Commons Attribution 4.0 License.
             </p>
@@ -49,17 +49,17 @@
         <div class="social">
             <ul>
                 <li>
-                    <a class="btn btn-focus-yellow btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
+                    <a class="btn btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
                         Facebook
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-focus-yellow btn-social twitter" href="https://twitter.com/openstax" title="twitter">
+                    <a class="btn btn-social twitter" href="https://twitter.com/openstax" title="twitter">
                         Twitter
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-focus-yellow btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
+                    <a class="btn btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
                         LinkedIn
                     </a>
                 </li>
