--- a/src/app/pages/adopters/adopters.scss
+++ b/src/app/pages/adopters/adopters.scss
@@ -2,13 +2,16 @@
 
 h1 {
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .adopters {
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: column wrap;
     font-size: 1.5rem;
     font-weight: 400;
+    max-height: 1553rem;
+    width: 25%;
 }
 
 .adopter {
