Fix K-12 banner styles for all browsers and screens

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -8,7 +8,7 @@
                 <div class="student"></div>
                 <div class="overlay">
                     <div class="text-block">
-                        <h1 class="header">Here is the first song off our new album.</h1>
+                        <h1 class="header">Free textbooks. High quality. No catch.</h1>
                         <div class="blurb">
                             Some of the most valuable investments don't have a price tag.
                             Neither do our textbooks. Our free, high-quality textbooks and
