--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -1,12 +1,12 @@
 <style scoped>
     @import url(/app/pages/k-12/k-12.css);
     @import url(/app/components/buckets/buckets.css);
-    @import url(/app/pages/k-12/banner/banner.css);
+    @import url(/app/pages/k-12/hero/hero.css);
     @import url(/app/pages/k-12/tutor/tutor.css);
 </style>
 <div class="k-12-page">
     <main id="maincontent">
-        <div class="banner"></div>
+        <div class="hero w-cards"></div>
         <span class="scrolldown-chevron"><a href="#tutor"><i class="fa fa-chevron-down"></i></a></span>
         <div class="tutor-banner" id="tutor">
             <img class="tutor-bg-overlay" src="/images/k-12/paper-plane.svg" />
