--- a/src/app/pages/k-12/tutor/tutor.hbs
+++ b/src/app/pages/k-12/tutor/tutor.hbs
@@ -1,4 +1,4 @@
-<div class="tutor hero">
+<div class="tutor">
     <div class="tutor-caption">
         <div class="caption">
             <h1>OpenStax Tutor</h1>
