Make banners rotate

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -3,7 +3,7 @@
 </style>
 <div class="home-page hidden">
     <main id="maincontent">
-        <div class="book-banner"></div>
+        <div class="book-banners"></div>
         <span class="scrolldown-chevron"><a href="#education"><i class="fa fa-chevron-down"></i></a></span>
         <div class="quote-buckets"></div>
         <div id="education" class="education"></div>
