Clean up Adopters, footer, and ULs where IE leaves bullets
Created no-bullets class for ULs that should have no bullets
Tidied footer, centered social icon group
Fixed the menu chevron placement in IE without breaking it in Chrome
Put adopters in columns (displays faster and correctly in IE)

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -4,7 +4,7 @@
         <div class="hero-quote">Access. The Future of Education.</div>
 
         <div class="copyright">
-            <ul>
+            <ul class="no-bullets">
                 <!--<li>
                     <a href="/news">News</a>
                 </li>-->
@@ -47,7 +47,7 @@
         </div>
 
         <div class="social">
-            <ul>
+            <ul class="no-bullets">
                 <li>
                     <a class="btn btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
                         Facebook
