--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -80,9 +80,6 @@ $transition: 0.3s;
     .nav-menu {
         margin: 0;
         padding: 0;
-        list-style: none;
-        // Hide bullets in IE
-        list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
         transform: scale3d(0, 0, 0);
         flex: 0 auto;
         opacity: 0;
@@ -153,8 +150,9 @@ $transition: 0.3s;
             right: -2rem;
 
             @include desktop {
-                bottom: 2.2rem;
-                right: -2.5rem;
+                bottom: 1.1rem;
+                padding-bottom: 25%;
+                right: -1.5rem;
                 transform: rotate3d(0, 0, 1, 90deg);
                 fill: color(neutral-medium);
 
@@ -198,9 +196,6 @@ $transition: 0.3s;
 
         .dropdown-menu {
             overflow: hidden;
-            list-style: none;
-            // Hide bullets in IE
-            list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
             margin: 0;
             padding: 0;
             font-weight: 300;
