--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -133,7 +133,7 @@
                     you have a correction to suggest, submit it here. We'll review your
                     suggestion and make necessary changes.
                 </p>
-                <ul class="links">
+                <ul class="links no-bullets">
                     <li><a class="go-to errata-link">Errata list</a></li>
                     <li><a class="go-to suggest-correction-link">Suggest a correction</a></li>
                 </ul>
