--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -32,7 +32,7 @@
                 </p>
             </div>
 
-            <ul class="partners">
+            <ul class="partners no-bullets">
                 {{#each highlightedPartners}}
                     <li>
                         <a href="{{url}}">
