--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,12 @@ p {
     margin-bottom: 1rem;
 }
 
+.no-bullets {
+    // Hide bullets in IE
+    list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
+    list-style-type: none;
+}
+
 .loader {
     align-items: center;
     background-color: color(orange);
