--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -6,7 +6,7 @@
 
     <nav class="meta-nav">
         <div class="container">
-            <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
+            <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/about-us" role="menuitem">About Us</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item login"><a href="#" role="menuitem">Login<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
@@ -38,7 +38,7 @@
                 <span class="logo-quote">Access. The future of education.</span>
             </span>
 
-            <ul class="nav-menu main-menu">
+            <ul class="nav-menu main-menu no-bullets">
                 <li class="nav-menu-item dropdown" role="presentation">
                     <a href="/subjects" role="menuitem" aria-haspopup="true">Subjects<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Subjects menu">
