--- a/src/app/pages/adopters/adopters.scss
+++ b/src/app/pages/adopters/adopters.scss
@@ -7,22 +7,42 @@ h1 {
 
 .adopters {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     font-size: 1.5rem;
     font-weight: 400;
-    max-height: 1553rem;
-    width: 25%;
+    justify-content: space-between;
 }
 
-.adopter {
-    flex-basis: 25%;
+.adopter-column {
+    display: none;
     padding: 0.5rem;
 
     @include phone {
-        flex-basis: 100%;
+        &.one-column {
+            display: block;
+        }
     }
 
     @include tablet {
-        flex-basis: 33%;
+        flex-basis: 30%;
+
+        &.three-column {
+            display: block;
+        }
+    }
+
+    @include desktop {
+        flex-basis: 22%;
+
+        &.four-column {
+            display: block;
+        }
+    }
+
+    .adopter {
+        line-height: 1.3;
+        margin-bottom: 1rem;
+        padding-left: 0.5rem;
+        text-indent: -0.5rem;
     }
 }
