Make login link open in same tab
Made click event reset window location so offsite link doesn’t open in
new tab.
Created attachListenerTo method for BaseView that handles
addEventListener and removeEventListener; replaced throughout code base.
Also: fixed bug in multi-select

--- a/src/app/components/loading-section/loading-section.scss
+++ b/src/app/components/loading-section/loading-section.scss
@@ -3,6 +3,7 @@
 .os-loader {
     background-color: #efefef;
     height: 100vh;
+    left: 0;
     overflow: hidden;
     perspective: 1000;
     position: absolute;
