--- a/src/app/pages/adopters/adopters.scss
+++ b/src/app/pages/adopters/adopters.scss
@@ -1,48 +1,50 @@
 @import 'mixins';
 
-h1 {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-.adopters {
-    display: flex;
-    flex-flow: row wrap;
-    font-size: 1.5rem;
-    font-weight: 400;
-    justify-content: space-between;
-}
-
-.adopter-column {
-    display: none;
-    padding: 0.5rem;
-
-    @include phone {
-        &.one-column {
-            display: block;
-        }
+.adopters-page {
+    h1 {
+        text-align: center;
+        margin-bottom: 2rem;
     }
 
-    @include tablet {
-        flex-basis: 30%;
-
-        &.three-column {
-            display: block;
-        }
+    .adopters {
+        display: flex;
+        flex-flow: row wrap;
+        font-size: 1.5rem;
+        font-weight: 400;
+        justify-content: space-between;
     }
 
-    @include desktop {
-        flex-basis: 22%;
+    .adopter-column {
+        display: none;
+        padding: 0.5rem;
 
-        &.four-column {
-            display: block;
+        @include phone {
+            &.one-column {
+                display: block;
+            }
         }
-    }
 
-    .adopter {
-        line-height: 1.3;
-        margin-bottom: 1rem;
-        padding-left: 0.5rem;
-        text-indent: -0.5rem;
+        @include tablet {
+            flex-basis: 30%;
+
+            &.three-column {
+                display: block;
+            }
+        }
+
+        @include desktop {
+            flex-basis: 22%;
+
+            &.four-column {
+                display: block;
+            }
+        }
+
+        .adopter {
+            line-height: 1.3;
+            margin-bottom: 1rem;
+            padding-left: 0.5rem;
+            text-indent: -0.5rem;
+        }
     }
 }
