Handle books with 2nd iBook volume

--- a/src/app/components/get-this-title/get-this-title.hbs
+++ b/src/app/components/get-this-title/get-this-title.hbs
@@ -46,12 +46,27 @@
         </div>
         {{/if}}
         {{#if ibookLink}}
-            <div class="option">
-                <a href="{{ibookLink}}">
-                    <span class="fa fa-tablet"></span>
-                    iBook
-                </a>
-            </div>
+                {{#if ibookLink2}}
+                    <div class="option">
+                        <span class="option-header">
+                            <span class="fa fa-tablet"></span>
+                            iBook
+                        </span>
+                        <a href="{{ibookLink}}">
+                            Volume 1
+                        </a>
+                        <a href="{{ibookLink2}}">
+                            Volume 2
+                        </a>
+                    </div>
+                {{else}}
+                    <div class="option">
+                        <a href="{{ibookLink}}">
+                            <span class="fa fa-tablet"></span>
+                            iBook
+                        </a>
+                    </div>
+                {{/if}}
         {{/if}}
     </div>
 </div>
