Add new image to tutor product box

--- a/src/app/components/products-boxes/products-boxes.scss
+++ b/src/app/components/products-boxes/products-boxes.scss
@@ -87,6 +87,6 @@
     }
 
     .tutor > .image {
-        background-image: url('/images/k-12/bx-cnx-2x.jpg');
+        background-image: url('/images/k-12/tutor-pilots.jpg');
     }
 }
