--- a/src/app/pages/k-12/k-12.scss
+++ b/src/app/pages/k-12/k-12.scss
@@ -38,6 +38,10 @@
         }
     }
 
+    .strips {
+        margin-bottom: 8rem;
+    }
+
     .buckets-section {
         padding-top: 8rem;
         padding-bottom: 8rem;
