Change chevron styling, change K-12 blurbs, fix scroll-wheel bug
Updated product boxes copy
Fixed bug in mac-scroll code
Made Details page handle missing data (particularly TOC)
Updated K-12 copy
Changed chevron styling
Fix remover bug

--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -122,6 +122,7 @@
         }
 
         &.full {
+            align-items: center;
             background-color: color(orange);
             margin: 0;
             min-height: 0;
