--- a/src/app/pages/k-12/hero/hero.hbs
+++ b/src/app/pages/k-12/hero/hero.hbs
@@ -3,8 +3,12 @@
     <div class="overlay">
         <div class="text-block">
             <h1>Access for K-12</h1>
-            <p class="blurb">So we’re leveling the playing field in K­12 classrooms with personalized
-            learning that gives students the learning support they need, when they need it. Now teachers will have more time and resources to invest in the things that matter most.</p>
+            <p class="blurb">
+                No two students are alike. So our digital personalized learning courseware
+                and free, high quality books for AP<sup>®</sup> courses give students the
+                resources to become who they want to be. Because access--and tailored
+                learning support--is what can unlock their futures.
+            </p>
         </div>
     </div>
 </div>
