--- a/src/app/pages/k-12/tutor/tutor.hbs
+++ b/src/app/pages/k-12/tutor/tutor.hbs
@@ -3,7 +3,7 @@
         <div class="caption">
             <h1>OpenStax Tutor</h1>
             <span class="blurb">
-                Our customizable courseware uses cognitive science and machine
+                Our customizable digital courseware uses cognitive science and machine
                 learning to create a personalized learning experience that
                 empowers students to succeed.
             </span>
