--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,10 +66,9 @@ sup {
 .scrolldown-chevron {
     align-items: center;
     display: flex;
-    font-size: 4rem;
+    font-size: 3rem;
     height: 0;
     justify-content: space-around;
-    opacity: 0.5;
     position: relative;
     top: -3rem;
     z-index: 100;
@@ -79,9 +78,7 @@ sup {
     }
 
     i {
-        background-color: rgba(color(neutral-dark), 0.3);
-        border-radius: 1em;
-        box-shadow: 0 0 2rem rgba(color(neutral-dark), 0.5);
+        text-shadow: 0 0.2rem 0.2rem rgba(color(neutral-dark), 0.1);
         color: color(neutral-lightest);
         padding: 0 2rem 0.4rem;
     }
