make toc box larger & correct toc overlay to cover header when active

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -1,6 +1,7 @@
 <style scoped>
     @import url(/app/pages/details/details.css);
     @import url(/app/components/get-this-title/get-this-title.css);
+    @import url(/app/components/remover/remover.css);
 </style>
 <div class="details-page hidden">
         <section class="container book-info">
