--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -102,7 +102,8 @@ sup {
     display: none;
 }
 
-.no-scroll {
+.no-scroll,
+.toc-overlay {
     overflow: hidden;
 }
 
@@ -144,6 +145,10 @@ sup {
 
     @include desktop {
         padding-top: 11rem;
+    }
+
+    .toc-overlay & {
+        z-index: 2;
     }
 }
 
