Fix Impact page banner styles for all screens

--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -4,17 +4,19 @@
 <div class="impact-page page hidden">
     <main id="maincontent">
         <div class="hero w-cards">
-            <div class="box-1"></div>
-            <div class="box-2"></div>
-            <div class="student"></div>
-            <div class="overlay">
-                <div class="text-block">
-                    <h1 class="header">We measure our success in access.</h1>
-                    <div class="blurb">
-                        Since 2012, OpenStax has saved students $66 million and counting by offering free,
-                        peer-reviewed textbooks for the highest-enrollment college courses.
-                        Meet the schools who’ve adopted OpenStax and some of the students who’ve benefited
-                        from free access to the learning materials they need to succeed.
+            <div class="square-1"></div>
+            <div class="square-2"></div>
+            <div class="row container-wrap">
+                <div class="student"></div>
+                <div class="overlay">
+                    <div class="text-block">
+                        <h1 class="header">We measure our success in access.</h1>
+                        <div class="blurb">
+                            Since 2012, OpenStax has saved students $66 million and counting by offering free,
+                            peer-reviewed textbooks for the highest-enrollment college courses.
+                            Meet the schools who’ve adopted OpenStax and some of the students who’ve benefited
+                            from free access to the learning materials they need to succeed.
+                        </div>
                     </div>
                 </div>
             </div>
