Fix styles in footer, education banner, Impact, Subjects

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -1,7 +1,7 @@
 <style scoped>@import url(/app/components/shell/footer/footer.css);</style>
 <footer class="footer">
     <div class="boxed">
-        <div class="hero-quote">Access. The Future of Education.</div>
+        <div class="hero-quote">Access.<span class="narrow-block">The Future of Education.</span></div>
 
         <div class="copyright">
             <ul class="no-bullets">
