--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -49,7 +49,7 @@
             @include desktop {
                 width: 37rem;
                 font-size: 2.6rem;
-                font-weight: 100;
+                font-weight: 300;
                 letter-spacing: 0.1rem;
             }
 
@@ -83,7 +83,7 @@
 
             @include desktop {
                 width: 37rem;
-                font-weight: 100;
+                font-weight: 300;
                 letter-spacing: 0.1rem;
                 line-height: 2.8rem;
             }
@@ -111,14 +111,11 @@
 
         @media (min-width: 600px) {
             margin-top: 1.5rem;
-            bottom: 3rem;
+            bottom: calc(7.5rem + 5vw);
         }
 
         @media (min-width: 1000px) {
-            bottom: 7rem;
-        }
-
-        @include desktop {
+            bottom: 14.5rem;
             left: 0;
         }
 
@@ -242,8 +239,8 @@
         background-size: 100% auto;
         bottom: 0;
         right: 0;
+        height: 105%;
         width: 33rem;
-        height: 100%;
         z-index: 2;
 
         @include desktop {
