--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -93,6 +93,7 @@
                 <select multiple name="00NU0000005VmTu">
                      <option value="None" disabled selected>None</option>
                      <option value="Cerego">Cerego</option>
+                     <option value="CogBooks">CogBooks</option>
                      <option value="Courseweaver">Courseweaver</option>
                      <option value="Expert TA">Expert TA</option>
                      <option value="Junction">Junction</option>
