Added Lumens as an ally on adoption form and shortened bio to 50 words as requested

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -98,6 +98,7 @@
                      <option value="Expert TA">Expert TA</option>
                      <option value="Junction">Junction</option>
                      <option value="Lrnr">Lrnr</option>
+                     <option value="Lumen">Lumen</option>
                      <option value="Sapling Learning">Sapling Learning</option>
                      <option value="SimBio">SimBio</option>
                      <option value="WebAssign">WebAssign</option>
