--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -58,6 +58,7 @@
         background-color: rgba(color(blue), 0.1);
         display: none;
         position: absolute;
+        transform: translateZ(0);
         z-index: 0;
 
         @include desktop {
@@ -126,6 +127,7 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
+        transform: translateZ(0);
         z-index: 1;
     }
 
