Add coming soon to Subjects and Details page

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -5,7 +5,7 @@
 </style>
 <div class="details-page hidden">
         <section class="container book-info">
-            <img class="book-cover" />
+            <div class="cover-wrap"><img class="book-cover" /></div>
                 <section class="details">
                     <h1 class="title"></h1>
                     <div class="tabs">
